<resources>
    <string name="app_name">Toppr Events</string>

    <string name="home_screen">Home</string>

    <string name="search_hint">Search by name or category</string>
    <string name="total_events">Total Events:</string>

    <string name="sort">Sort by</string>

    <string name="fav">Favourite</string>
    <string name="cat">Category</string>
    <string name="send_to">Share Event</string>
</resources>
