<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context="com.topprevents.android.MainActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/circular"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/et_bg"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/search_hint"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="@dimen/global_padding"
        android:id="@+id/search_box"
        android:padding="@dimen/global_padding" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel_search"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:id="@+id/cancel_search"
            android:layout_alignRight="@+id/search_box"
            android:layout_alignEnd="@+id/search_box" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/global_padding"
        android:id="@+id/relativeLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_events"
            android:textStyle="bold"
            android:textSize="@dimen/text_bold_size"
            android:textColor="@color/black"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalEvents"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/curretPage"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/curvy_blackcorner_base"
            android:layout_alignParentTop="true"
            android:padding="2dp"
            android:id="@+id/openFav"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fav_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open Favourite"
                android:layout_marginLeft="@dimen/global_padding"/>



        </LinearLayout>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/line_seperator"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:id="@+id/view"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/pagingCont">


        <ListView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list"
            android:isScrollContainer="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"></ListView>


    </android.support.v4.widget.SwipeRefreshLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/pagingCont"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:isScrollContainer="false"
        android:weightSum="10"
        android:background="@drawable/paging_bg"
        android:layout_above="@+id/view2"
        android:layout_centerHorizontal="true">


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        android:id="@+id/view2"
        android:isScrollContainer="false"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_padding"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:isScrollContainer="false"
        android:id="@+id/relativeLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/curvy_blackcorner_base"
            android:padding="@dimen/global_padding"
            android:gravity="center_vertical"
            android:id="@+id/sort"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sort_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                android:layout_marginLeft="@dimen/global_padding"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/curvy_blackcorner_base"
            android:padding="@dimen/global_padding"
            android:layout_marginLeft="@dimen/global_padding"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/sort"
            android:layout_toEndOf="@+id/sort"
            android:id="@+id/favLower"
            android:layout_marginBottom="@dimen/global_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fav_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fav"
                android:layout_marginLeft="@dimen/global_padding"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/curvy_blackcorner_base"
            android:padding="@dimen/global_padding"
            android:id="@+id/catLower"
            android:gravity="center_vertical"
            android:layout_below="@+id/favLower"
            android:layout_alignRight="@+id/favLower"
            android:layout_alignEnd="@+id/favLower">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cat_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:layout_marginLeft="@dimen/global_padding"/>



        </LinearLayout>


        <TextView
            android:id="@+id/quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/paging_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="12sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
